[gd_scene load_steps=26 format=3 uid="uid://c8nvfjq26e03"]

[ext_resource type="Script" path="res://source/entities/monsters/orc_big.gd" id="1_dtk8o"]
[ext_resource type="Texture2D" uid="uid://ds2r0kjrtssel" path="res://assets/textures/monsters/big_orc_spritesheet.png" id="1_r5bps"]
[ext_resource type="Texture2D" uid="uid://ddikyy2l3pdxj" path="res://assets/textures/monsters/small_orc_spritesheet.png" id="2_kufor"]
[ext_resource type="Texture2D" uid="uid://thplxecdym7e" path="res://assets/textures/monsters/monster_dissolve.png" id="3_8xppb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dohe"]
atlas = ExtResource("1_r5bps")
region = Rect2(20, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4pp2"]
atlas = ExtResource("2_kufor")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcva5"]
atlas = ExtResource("3_8xppb")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_elvfi"]
atlas = ExtResource("3_8xppb")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht6fg"]
atlas = ExtResource("3_8xppb")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_iar6t"]
atlas = ExtResource("1_r5bps")
region = Rect2(20, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_07hkr"]
atlas = ExtResource("1_r5bps")
region = Rect2(0, 0, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_kff1w"]
atlas = ExtResource("1_r5bps")
region = Rect2(10, 0, 10, 12)

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dohe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4pp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcva5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elvfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht6fg")
}],
"loop": true,
"name": &"dissolve",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iar6t")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07hkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kff1w")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8jql"]
size = Vector2(48, 96)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(48, 8)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(8, 56)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(8, 56)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwvtl"]
bg_color = Color(0.169245, 0.169245, 0.169245, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqcu6"]
bg_color = Color(0.0823529, 0.498039, 0.121569, 1)

[sub_resource type="Animation" id="Animation_yd6sc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0823529, 0.498039, 0.121569, 1)]
}

[sub_resource type="Animation" id="Animation_mnslw"]
resource_name = "healthbar-0%"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.858824, 0.447059, 0.0823529, 1), Color(0.713726, 0.0901961, 0.164706, 1)]
}

[sub_resource type="Animation" id="Animation_l6rsu"]
resource_name = "healthbar-25%"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.8, 0, 1), Color(0.858824, 0.447059, 0.0823529, 1)]
}

[sub_resource type="Animation" id="Animation_p0vwq"]
resource_name = "healthbar-50%"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.0, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.541176, 0.65098, 0.0627451, 1), Color(1, 0.8, 0, 1)]
}

[sub_resource type="Animation" id="Animation_67172"]
resource_name = "healthbar-75%"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0823529, 0.498039, 0.121569, 1), Color(0.541176, 0.65098, 0.0627451, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0bymf"]
_data = {
"RESET": SubResource("Animation_yd6sc"),
"healthbar-0%": SubResource("Animation_mnslw"),
"healthbar-25%": SubResource("Animation_l6rsu"),
"healthbar-50%": SubResource("Animation_p0vwq"),
"healthbar-75%": SubResource("Animation_67172")
}

[node name="OrcBig0" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.125, 0.125)
collision_layer = 16
collision_mask = 131
script = ExtResource("1_dtk8o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(8, 8)
sprite_frames = SubResource("1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.34091

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_g8jql")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 33)
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(0, -68)
shape = SubResource("3")

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2(-28, 4)
shape = SubResource("4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2(28, 4)
shape = SubResource("8")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = -88.0
offset_right = 32.0
offset_bottom = -72.0
theme_override_styles/background = SubResource("StyleBoxFlat_cwvtl")
theme_override_styles/fill = SubResource("StyleBoxFlat_qqcu6")
max_value = 4.0
value = 4.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0bymf")
}
autoplay = "RESET"

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
